What's new in hachoir-parser 1.2.2?
===================================

 * HachoirParserList() is no more a singleton:
   use HachoirParserList.getInstance() to get a singleton
 * createParser() has an option tags argument: can be used to force a parser

What's new in hachoir-parser 1.2.1?
===================================

 * Improve OLE2 and MS Office parsers:
   - support small blocks
   - fix the charset of the summary properties
   - summary property integers are unsigned
   - use TimedeltaWin64 for the TotalEditingTime field
   - create minimum Word document parser
 * Python parser: support magic numbers of Python 3000
   with the keyword only arguments
 * Create Apple/NeXT Binary Property List (BPLIST) parser
 * MPEG audio: reject file with no valid frame nor ID3 header
 * Skip subfiles in JPEG files
 * Create Apple/NeXT Binary Property List (BPLIST) parser by Robert Xiao

What's new in hachoir-parser 1.2?
=================================

 * Create FLAC parser, written by Esteban Loiseau
 * Create Action Script parser used in Flash parser,
   written by Sebastien Ponce
 * Create Gnome Keyring parser: able to parse the stored passwords using
   Python Crypto if the main password is written in the code :-)
 * GIF: support text extension field; parse image content
   (LZW compressed data)
 * Fix charset of IPTC string (guess it, it's not always ISO-8859-1)
 * TIFF: Sebastien Ponce improved the parser: parse image data, add many
   tags, etc.
 * MS Office: guess the charset for summary strings since it could be
   ISO-8859-1 or UTF-8

What's new in hachoir-parser 1.1?
=================================

Main changes: add "EFI Platform Initialization Firmware
Volume" (PIFV) and "Microsoft Windows Help" (HLP) parsers. Details:

 * MPEG audio:

   - add createContentSize() to support hachoir-subfile
   - support file starting with ID3v1
   - if file doesn't contain any frame, use ID3v1 or ID3v2 to create the
     description

 * EXIF:
